.metadata/.plugins/org.eclipse.cdt.ui/practica2.build.log
12:32:11 **** Incremental Build of configuration Debug for project practica2 ****
make -r -j3 all 
Building file: ../source/GPIO.c
Building file: ../source/GlobalFunctions.c
Building file: ../source/LCDFunctions.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -DCR_INTEGER_PRINTF -DSDK_DEBUGCONSOLE=0 -D__MCUXPRESSO -D__USE_CMSIS -DDEBUG -DSDK_OS_BAREMETAL -DFSL_RTOS_BM -DCPU_MK64FN1M0VLL12 -DCPU_MK64FN1M0VLL12_cm4 -D__REDLIB__ -I"/Sistemas_Embebidos/Practica2/practica2/source" -I"/Sistemas_Embebidos/Practica2/practica2" -I"/Sistemas_Embebidos/Practica2/practica2/startup" -I"/Sistemas_Embebidos/Practica2/practica2/CMSIS" -I/Users/Roberto/mcuxpresso/SDKPackages/SDK_2/CMSIS/Include -I/Users/Roberto/mcuxpresso/SDKPackages/SDK_2/CMSIS -I/Users/Roberto/mcuxpresso/SDKPackages/SDK_2/devices/MK64F12 -I/Users/Roberto/mcuxpresso/SDKPackages/SDK_2/devices -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m4 -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -D__REDLIB__ -specs=redlib.specs -MMD -MP -MF"source/LCDFunctions.d" -MT"source/LCDFunctions.o" -MT"source/LCDFunctions.d" -o "source/LCDFunctions.o" "../source/LCDFunctions.c"
Invoking: MCU C Compiler
arm-none-eabi-gcc -DCR_INTEGER_PRINTF -DSDK_DEBUGCONSOLE=0 -D__MCUXPRESSO -D__USE_CMSIS -DDEBUG -DSDK_OS_BAREMETAL -DFSL_RTOS_BM -DCPU_MK64FN1M0VLL12 -DCPU_MK64FN1M0VLL12_cm4 -D__REDLIB__ -I"/Sistemas_Embebidos/Practica2/practica2/source" -I"/Sistemas_Embebidos/Practica2/practica2" -I"/Sistemas_Embebidos/Practica2/practica2/startup" -I"/Sistemas_Embebidos/Practica2/practica2/CMSIS" -I/Users/Roberto/mcuxpresso/SDKPackages/SDK_2/CMSIS/Include -I/Users/Roberto/mcuxpresso/SDKPackages/SDK_2/CMSIS -I/Users/Roberto/mcuxpresso/SDKPackages/SDK_2/devices/MK64F12 -I/Users/Roberto/mcuxpresso/SDKPackages/SDK_2/devices -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m4 -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -D__REDLIB__ -specs=redlib.specs -MMD -MP -MF"source/GlobalFunctions.d" -MT"source/GlobalFunctions.o" -MT"source/GlobalFunctions.d" -o "source/GlobalFunctions.o" "../source/GlobalFunctions.c"
Invoking: MCU C Compiler
arm-none-eabi-gcc -DCR_INTEGER_PRINTF -DSDK_DEBUGCONSOLE=0 -D__MCUXPRESSO -D__USE_CMSIS -DDEBUG -DSDK_OS_BAREMETAL -DFSL_RTOS_BM -DCPU_MK64FN1M0VLL12 -DCPU_MK64FN1M0VLL12_cm4 -D__REDLIB__ -I"/Sistemas_Embebidos/Practica2/practica2/source" -I"/Sistemas_Embebidos/Practica2/practica2" -I"/Sistemas_Embebidos/Practica2/practica2/startup" -I"/Sistemas_Embebidos/Practica2/practica2/CMSIS" -I/Users/Roberto/mcuxpresso/SDKPackages/SDK_2/CMSIS/Include -I/Users/Roberto/mcuxpresso/SDKPackages/SDK_2/CMSIS -I/Users/Roberto/mcuxpresso/SDKPackages/SDK_2/devices/MK64F12 -I/Users/Roberto/mcuxpresso/SDKPackages/SDK_2/devices -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m4 -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -D__REDLIB__ -specs=redlib.specs -MMD -MP -MF"source/GPIO.d" -MT"source/GPIO.o" -MT"source/GPIO.d" -o "source/GPIO.o" "../source/GPIO.c"
../source/LCDFunctions.c: In function 'pantallaInicial':
../source/LCDFunctions.c:41:24: error: unknown type name 'ty'
  LCDNokia_gotoXY(10,1);ty
                        ^
../source/LCDFunctions.c:42:2: warning: parameter names (without types) in function declaration
  LCDNokia_sendString(velocidad);
  ^
../source/LCDFunctions.c:42:2: error: conflicting types for 'LCDNokia_sendString'
In file included from ../source/LCDFunctions.c:9:0:
../source/LCDNokia5110.h:36:6: note: previous declaration of 'LCDNokia_sendString' was here
 void LCDNokia_sendString(uint8*);
      ^
../source/LCDFunctions.c:35:8: warning: unused variable 'velocidad' [-Wunused-variable]
  uint8 velocidad[]="Velocidad"; /*! String to be printed in the LCD*/
        ^
../source/LCDFunctions.c: In function 'convierteAFahrenheit':
../source/LCDFunctions.c:566:9: warning: unused variable 'punto' [-Wunused-variable]
   uint8 punto = 0x2E;
         ^
../source/LCDFunctions.c:565:9: warning: unused variable 'fahrenheit' [-Wunused-variable]
   uint8 fahrenheit[] = "'F";
         ^
../source/LCDFunctions.c:472:8: warning: unused variable 'counter' [-Wunused-variable]
  float counter;
        ^
make: *** [source/LCDFunctions.o] Error 1
make: *** Waiting for unfinished jobs....
Finished building: ../source/GlobalFunctions.c
 
Finished building: ../source/GPIO.c
 

12:32:13 Build Finished (took 1s.993ms)

